Fixed the styling on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -914,7 +914,7 @@ $baseurl: '{{ site.baseurl }}';
 			.picture {
 				display:block; 
 				float: right; 
-				height: 100%;
+				padding: 20px;
 			}
 
 			img {
